style: fix gap of elements

--- a/src/views/gameView/gameView.css
+++ b/src/views/gameView/gameView.css
@@ -8,6 +8,7 @@
   border-radius: 15px;
   padding-top: 20px;
   padding-bottom: 20px;
+  gap: 20px;
 }
 
 .game-row {
